updated with the activity page language
$.ajax({
	type: "POST",
    url: "/api/webapi/getlangdata",
    data: {
    },
    dataType: "json",
	success: function (response) {
	load_lang_data(response.data);
   }
 });

function load_lang_data(data)
{
	$.each(data, function(key,valueObj){
		$("[data-lang="+key+"]").text(valueObj);
   });
}

add data-lang="gameRecords"  gameRecords is the key value from the language page please replace this key value wherever u required to change the text

--- a/src/views/checkIn/activity.ejs
+++ b/src/views/checkIn/activity.ejs
@@ -492,7 +492,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> Activity</div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="activity"> Activity</div>
                 <div data-v-106b99c8="" class="navbar-right">
                     <div data-v-11ffe290="" data-v-106b99c8="" class="c-row">
                         <i class="fa-fade fa center" style="color: #FFF">
@@ -506,13 +506,13 @@
             <div data-v-53f1c857="" data-v-0ea39f99="" class="activity-wrapper" style="--f817f0ee: 'Roboto', 'Inter', sans-serif;">
               <div data-v-53f1c857="" class="activity-banner">
                 <div data-v-53f1c857="">
-                  <div data-v-53f1c857="" class="banner-title">
+                  <div data-v-53f1c857="" class="banner-title" data-lang="activity">
                     Activity
                   </div>
-                  <div data-v-53f1c857="" class="banner-para">
+                  <div data-v-53f1c857="" class="banner-para" data-lang="activityTip1">
                     Please remember to follow the event page
                   </div>
-                  <div data-v-53f1c857="" class="banner-para">
+                  <div data-v-53f1c857="" class="banner-para" data-lang="activityTip2">
                     We will launch user feedback activities from time to time
                   </div>
                 </div>
@@ -526,7 +526,7 @@
                       </div>
                       <!---->
                     </div>
-                    <span data-v-53f1c857="">
+                    <span data-v-53f1c857="" data-lang="actTip1">
                       Activity Award
                     </span>
                   </div>
@@ -536,7 +536,7 @@
                       </div>
                       <!---->
                     </div>
-                    <span data-v-53f1c857="">
+                    <span data-v-53f1c857="" data-lang="invitationBonus">
                       Invitation bonus
                     </span>
                   </div>
@@ -546,7 +546,7 @@
                       </div>
                       <!---->
                     </div>
-                    <span data-v-53f1c857="">
+                    <span data-v-53f1c857="" data-lang="laundryAmount">
                       Betting rebate
                     </span>
                   </div>
@@ -556,7 +556,7 @@
                       </div>
                       <!---->
                     </div>
-                    <span data-v-53f1c857="">
+                    <span data-v-53f1c857="" data-lang="superjackpot">
                       Super Jackpot
                     </span>
                   </div>
@@ -566,7 +566,7 @@
                       </div>
                       <!---->
                     </div>
-                    <span data-v-53f1c857="">
+                    <span data-v-53f1c857="" data-lang="newMenberPackage">
                       New member gift package
                     </span>
                   </div>
@@ -575,20 +575,20 @@
                   <div data-v-53f1c857="" class="content-title" onclick="location.href='/redenvelopes'">
                     <img data-v-53f1c857="" data-src="/assets/png/signInBanner-33f86d3f.png"
                     src="/assets/png/signInBanner-33f86d3f.png" lazy="loaded">
-                    <div data-v-53f1c857="" class="content-para">
+                    <div data-v-53f1c857="" class="content-para" data-lang="giftExchange">
                       Gifts
                     </div>
-                    <p data-v-53f1c857="">
+                    <p data-v-53f1c857="" data-lang="activityTip3">
                       Enter the redemption code to receive gift rewards
                     </p>
                   </div>
                   <div data-v-53f1c857="" class="content-title" onclick="location.href='/attendance'">
                     <img data-v-53f1c857="" data-src="/assets/png/giftRedeem-45917887.png"
                     src="/assets/png/giftRedeem-45917887.png" lazy="loaded">
-                    <div data-v-53f1c857="" class="content-para">
+                    <div data-v-53f1c857="" class="content-para" data-lang="ruleBonus">
                       Attendance bonus
                     </div>
-                    <p data-v-53f1c857="">
+                    <p data-v-53f1c857="" data-lang="activityTip4">
                       The more consecutive days you sign in, the higher the reward will be.
                     </p>
                   </div>
@@ -601,8 +601,8 @@
                     <img data-v-53f1c857="" src="https://ossimg.tirangaagent.com/Tiranga/banner/Banner_20240413193600mlfm.png"
                     class="act_0">
                     <div data-v-53f1c857="" class="box-content">
-                      <div data-v-53f1c857="" class="box-title">
-                        💸 First Deposit Bonus 💸
+                      <div data-v-53f1c857="" class="box-title" >
+                        💸 <span data-lang="code9014">First Deposit Bonus</span> 💸
                       </div>
                     </div>
                   </div>
@@ -610,8 +610,8 @@
                     <img data-v-53f1c857="" src="https://ossimg.tirangaagent.com/Tiranga/banner/Banner_2024041213555556ca.jpg"
                     class="act_1">
                     <div data-v-53f1c857="" class="box-content">
-                      <div data-v-53f1c857="" class="box-title">
-                        💰 Get Daily Check-in Bonus 💰
+                      <div data-v-53f1c857="" class="box-title" >
+                        💰  <span data-lang="code8007">Get Daily Check-in Bonus</span>  💰
                       </div>
                     </div>
                   </div>
@@ -620,7 +620,7 @@
                     class="act_2">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        🚀Aviator Fly High &amp; Win Big🚀
+                        🚀 <span data-lang="">Aviator Fly High &amp; Win Big</span>🚀
                       </div>
                     </div>
                   </div>
@@ -629,7 +629,7 @@
                     class="act_3">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        💰Lucky "10" Days Of Interest💰
+                        💰 <span data-lang="">Lucky "10" Days Of Interest</span>💰
                       </div>
                     </div>
                   </div>
@@ -638,7 +638,7 @@
                     class="act_4">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        ▶️ Youtube Creative Video ▶️
+                        ▶️ <span data-lang="">Youtube Creative Video</span> ▶️
                       </div>
                     </div>
                   </div>
@@ -647,7 +647,7 @@
                     class="act_5">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        ❗️ Mysterious Gift ❗️
+                        ❗️ <span data-lang="">Mysterious Gift</span>  ❗️
                       </div>
                     </div>
                   </div>
@@ -656,7 +656,7 @@
                     class="act_6">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        ✨Member Wingo Winning Streak✨
+                        ✨ <span data-lang="">Member Wingo Winning Streak</span>✨
                       </div>
                     </div>
                   </div>
@@ -665,7 +665,7 @@
                     class="act_7">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        💲Affiliate Program Tiranga💲
+                        💲 <span data-lang="">Affiliate Program Tiranga</span> 💲
                       </div>
                     </div>
                   </div>
@@ -674,7 +674,7 @@
                     class="act_8">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        ⚙️ Mission Bonus ⚙️
+                        ⚙️ <span data-lang="">Mission Bonus</span> ⚙️
                       </div>
                     </div>
                   </div>
@@ -683,7 +683,7 @@
                     class="act_9">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        ➕ Invitation Bonus ➕
+                        ➕  <span data-lang="invitationBonus">Invitation Bonus</span> ➕
                       </div>
                     </div>
                   </div>
@@ -692,13 +692,14 @@
                     class="act_10">
                     <div data-v-53f1c857="" class="box-content">
                       <div data-v-53f1c857="" class="box-title">
-                        Agent Commission
+                        <span data-lang="agencyCommis">Agent Commission</span>
+                       
                       </div>
                     </div>
                   </div>
                 </div>
                 <!---->
-                <div class="van-list__finished-text">
+                <div class="van-list__finished-text" data-lang="noMoreThere">
                   No more
                 </div>
                 <br><br><br><br><br><br>
@@ -710,28 +711,31 @@
               <!---->
               <!---->
             </div>
-                
-
-                
-                
-                    
-                   
-                    
-                    
-                    
-                    
-                
             </div>
             
         </div>
     </div>
-
-
-
     <%- include('../nav') -%>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
+      $.ajax({
+        type: "POST",
+        url: "/api/webapi/getlangdata",
+        data: {
+        },
+        dataType: "json",
+        success: function (response) {
+            load_lang_data(response.data);
+        }
+      });
 
-    
-    
+      function load_lang_data(data)
+      {
+        $.each(data, function(key,valueObj){
+          $("[data-lang="+key+"]").text(valueObj);
+        });
+      }
+    </script>
 </body>
 
 </html>
