--- a/src/views/account/login.ejs
+++ b/src/views/account/login.ejs
@@ -420,7 +420,7 @@
               <div data-v-57d49070="" data-v-0ce8d964="" class="passwordInput__container">
                 <div data-v-57d49070="" class="passwordInput__container-label">
                   <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
-                  src="">
+                  src="./assets/png/forgetpassword-135cea3e.png">
                   <span data-v-57d49070="">
                     Password
                   </span>
@@ -428,7 +428,7 @@
                 <div data-v-57d49070="" class="passwordInput__container-input">
                   <input data-v-57d49070="" id="passwordfield" type="password" placeholder="Please enterPassword"
                   maxlength="32" autocomplete="on" required>
-                  <img data-v-57d49070="" id="eyeicon" src="./index_files/eyeInvisible-2fa5c152.png"
+                  <img data-v-57d49070="" id="eyeicon" src="./assets/png/eyeInvisible-2fa5c152.png"
                   class="eye" onclick="showPass()">
                 </div>
               </div>
@@ -528,7 +528,7 @@
               <div data-v-57d49070="" data-v-5d3a4ff1="" class="passwordInput__container">
                 <div data-v-57d49070="" class="passwordInput__container-label">
                   <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
-                  src="">
+                  src="./index_files/eyeInvisible-2fa5c152.png">
                   <span data-v-57d49070="">
                     Password
                   </span>
