--- a/src/views/account/register.ejs
+++ b/src/views/account/register.ejs
@@ -306,8 +306,10 @@
                         </div>
                         <div data-v-23d378a6="" class="tip"></div>
                         <div data-v-57d49070="" data-v-23d378a6="" class="passwordInput__container">
-                            <div data-v-57d49070="" class="passwordInput__container-label"><img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
-                                src=""><span data-v-57d49070="">Set
+                            <div data-v-57d49070="" class="passwordInput__container-label">
+                                
+                                <img data-v-57d49070="" class="passwordInput__container-label__icon" data-origin=""
+                                src="./assets/png/forgetpassword-135cea3e.png">><span data-v-57d49070="">Set
                                     password</span></div>
                             <div data-v-57d49070="" class="passwordInput__container-input">
 
