data-lang="keyword" change with the appropriate associated key word prent in the  file

--- a/src/views/checkIn/attendance.ejs
+++ b/src/views/checkIn/attendance.ejs
@@ -428,22 +428,23 @@ background:#22275b;
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title">Attendance</div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="checkIn">Attendance</div>
+
                 <div data-v-106b99c8="" class="navbar-right"></div>
             </div>
 
             <div data-v-3ba0459b="" class="dailySignIn__container-hero">
                <div data-v-3ba0459b="" class="dailySignIn__container-hero__header">
-                  <h1 data-v-3ba0459b="">Attendance bonus</h1>
-                  <p data-v-3ba0459b="">Get rewards based on consecutive login days</p>
-                  <p data-v-3ba0459b="">Attended consecutively <span data-v-3ba0459b=""
-                        id="attendance_days_display">0</span> Day</p>
-                  <h1 data-v-3ba0459b="">Accumulated <span data-v-3ba0459b="" id="accumulated_amount_display">₹0.00</span>
+                  <h1 data-v-3ba0459b="" data-lang="ruleBonus">Attendance bonus</h1>
+                  <p data-v-3ba0459b="" data-lang="descRewordsBasedOnConsecutiveDays">Get rewards based on consecutive login days</p>
+                  <p data-v-3ba0459b="" data-lang="checkedInConsecutively">Attended consecutively <span data-v-3ba0459b=""
+                        id="attendance_days_display" >0</span><span data-lang="days"> Day </span> </p>
+                  <h1 data-v-3ba0459b=""><spna data-lang="comulativelyObtained">Accumulated </spna><span data-v-3ba0459b="" id="accumulated_amount_display">₹0.00</span>
                   </h1>
                </div>
                <div data-v-3ba0459b="" class="dailySignIn__container-hero__footer"><button data-v-3ba0459b=""
-                     onclick="location.href='/attendance/rules'">Game Rules</button><button data-v-3ba0459b=""
-                     onclick="location.href='/attendance/record'">Attendance history</button></div>
+                     onclick="location.href='/attendance/rules'" data-lang="comulativelyObtained">Game Rules</button><button data-v-3ba0459b=""
+                     onclick="location.href='/attendance/record'" data-lang="checkInRecord">Attendance history</button></div>
                <div data-v-3ba0459b="" class="img-wrap"></div>
             </div>
             <div data-v-3ba0459b="" class="white-wrapper"></div>
@@ -456,7 +457,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">1 Day</span>
+                        class="days-span">1 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -465,7 +466,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">2 Day</span>
+                        class="days-span">2 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -474,7 +475,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">3 Day</span>
+                        class="days-span">3 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -483,7 +484,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">4 Day</span>
+                        class="days-span">4 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -492,7 +493,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">5 Day</span>
+                        class="days-span">5 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -501,7 +502,7 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="" data-origin="/images/2-ba1ecbb1.png"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">6 Day</span>
+                        class="days-span">6 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block">
                      <div data-v-3ba0459b="" class="dailySignIn__container-content__wrapper-block__header">
@@ -510,11 +511,11 @@ background:#22275b;
                      </div>
                      <img data-v-3ba0459b="" class="ar-lazyload"
                         src="/images/2-ba1ecbb1.png" /><span data-v-3ba0459b=""
-                        class="days-span">7 Day</span>
+                        class="days-span">7 <span data-lang="days"> Day </span></span>
                   </div>
                   <div data-v-3ba0459b="" class="dailySignIn__container-content__footer">
-                     <div data-v-3ba0459b="" class="btn-wrapper" id="claim_attendence"><button data-v-3ba0459b="" class=""
-                           >Attendance</button></div>
+                     <div data-v-3ba0459b="" class="btn-wrapper" id="claim_attendence">
+                        <button data-v-3ba0459b="" class="" data-lang="checkIn">Attendance</button></div>
                   </div>
                </div>
               
@@ -543,6 +544,7 @@ background:#22275b;
           <script src="https://momentjs.com/downloads/moment.js"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
         <script>
+         
          function formatIndianNumber(num) {
             let formattedNum = new Intl.NumberFormat("en-IN", {
                maximumFractionDigits: 2,
@@ -616,6 +618,24 @@ background:#22275b;
                }
             }
          });
+         $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            $.each(data, function(key,valueObj){
+              $("[data-lang="+key+"]").text(valueObj);
+            });
+          }
+          
       </script>
 </body>
 
