check out daily mission
line no 655

--- a/src/views/checkIn/attendance.ejs
+++ b/src/views/checkIn/attendance.ejs
@@ -443,7 +443,7 @@ background:#22275b;
                   </h1>
                </div>
                <div data-v-3ba0459b="" class="dailySignIn__container-hero__footer"><button data-v-3ba0459b=""
-                     onclick="location.href='/attendance/rules'" data-lang="comulativelyObtained">Game Rules</button><button data-v-3ba0459b=""
+                     onclick="location.href='/attendance/rules'" data-lang="playRules">Game Rules</button><button data-v-3ba0459b=""
                      onclick="location.href='/attendance/record'" data-lang="checkInRecord">Attendance history</button></div>
                <div data-v-3ba0459b="" class="img-wrap"></div>
             </div>
