--- a/src/views/member/index.ejs
+++ b/src/views/member/index.ejs
@@ -864,7 +864,7 @@
     <div role="dialog" class="van-dialog" style="z-index: 2002;display: none;" aria-labelledby="Lời nhắc">
         <div data-v-b9e16d43="" class="dialog__container-img"><img data-v-b9e16d43="" alt="" class=""
                 data-origin=""
-                src="" style="width: 2.13333rem;height: 2.13333rem"></div>
+                src="/assets/png/orderCancelWarn-93894f35.png" style="width: 2.13333rem;height: 2.13333rem"></div>
         <div class="van-dialog__content">
             <div class="van-dialog__message van-dialog__message--has-title dialog__container-title"
                 style="font-size: .48rem;font-weight: 700;color: #fff">
