--- a/src/views/checkIn/dailytask.ejs
+++ b/src/views/checkIn/dailytask.ejs
@@ -654,7 +654,7 @@
             <div data-v-20a4a6c6="" class="hearder-status day" data-lang="dailyMission">
               Daily mission
             </div>
-            <span data-v-20a4a6c6="" class="headerR">
+            <span data-v-20a4a6c6="" class="headerR" data-lang="undone">
               Unfinished
             </span>
           </div>
@@ -672,7 +672,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -710,7 +710,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -748,7 +748,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -786,7 +786,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -824,7 +824,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -923,7 +923,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -979,7 +979,7 @@
           <div data-v-20a4a6c6="" class="task-item-description">
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
