--- a/src/views/checkIn/dailytask.ejs
+++ b/src/views/checkIn/dailytask.ejs
@@ -672,7 +672,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -683,7 +683,7 @@
               </span>
             </div>
           </div>
-          <div data-v-20a4a6c6="" class="btn btnOther status1">
+          <div data-v-20a4a6c6="" class="btn btnOther status1" data-lang="goComplete">
             to complete
           </div>
         </div>
@@ -710,7 +710,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -721,7 +721,7 @@
               </span>
             </div>
           </div>
-          <div data-v-20a4a6c6="" class="btn btnOther status1">
+          <div data-v-20a4a6c6="" class="btn btnOther status1" data-lang="goComplete">
             to complete
           </div>
         </div>
@@ -748,7 +748,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -759,7 +759,7 @@
               </span>
             </div>
           </div>
-          <div data-v-20a4a6c6="" class="btn btnOther status1">
+          <div data-v-20a4a6c6="" class="btn btnOther status1" data-lang="goComplete">
             to complete
           </div>
         </div>
@@ -786,7 +786,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -797,7 +797,7 @@
               </span>
             </div>
           </div>
-          <div data-v-20a4a6c6="" class="btn btnOther status1">
+          <div data-v-20a4a6c6="" class="btn btnOther status1" data-lang="goComplete">
             to complete
           </div>
         </div>
@@ -824,7 +824,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -835,7 +835,7 @@
               </span>
             </div>
           </div>
-          <div data-v-20a4a6c6="" class="btn btnOther status1">
+          <div data-v-20a4a6c6="" class="btn btnOther status1" data-lang="goComplete">
             to complete
           </div>
         </div>
@@ -902,7 +902,7 @@
                    .map(item => {
                       return `<div data-v-20a4a6c6="" class="task-item">
           <div data-v-20a4a6c6="" class="task-item-header">
-            <div data-v-20a4a6c6="" class="hearder-status day">
+            <div data-v-20a4a6c6="" class="hearder-status day" data-lang="dailyMission">
               Daily mission
             </div>
             <span data-v-20a4a6c6="" class="headerR">
@@ -923,7 +923,7 @@
             Daily betting bonus
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -936,7 +936,7 @@
           </div>
          <div data-v-20a4a6c6="" class="btnclaim btn btnOther status${item.isFinished && item.isClaimed === false ? 2 : 1}" labelid="${item.id}">
 
-            ${item.isFinished ? (item.isClaimed ? "Already Claimed" : "Claim") : "to complete"}
+            ${item.isFinished ? (item.isClaimed ? '<span data-lang="">Already Claimed</span>' : '<span data-lang="goComplete">Claim</span>') : '<span data-lang="goComplete">to complete</span>'}
           </div>
         </div>
                           `
@@ -959,7 +959,7 @@
                  .map(item => {
                     return `<div data-v-20a4a6c6="" class="task-item">
           <div data-v-20a4a6c6="" class="task-item-header">
-            <div data-v-20a4a6c6="" class="hearder-status week">
+            <div data-v-20a4a6c6="" class="hearder-status week"  data-lang="actTip4">
               weekly tasks
             </div>
             <span data-v-20a4a6c6="" class="headerR">
@@ -979,7 +979,7 @@
           <div data-v-20a4a6c6="" class="task-item-description">
           </div>
           <div data-v-20a4a6c6="" class="task-item-bottom">
-            <div data-v-20a4a6c6="">
+            <div data-v-20a4a6c6="" data-lang="awardsAmount">
               Award amount
             </div>
             <div data-v-20a4a6c6="" class="bottom-title">
@@ -991,7 +991,7 @@
             </div>
           </div>
           <div data-v-20a4a6c6="" class="btnweekclaim btn btnOther  status${item.isFinished && item.isClaimed === false ? 2 : 1}" labelid="${item.id}">
-            ${item.isFinished ? (item.isClaimed ? "Already Claimed" : "Claim") : "to complete"}
+            ${item.isFinished ? (item.isClaimed ? '<span data-lang="">Already Claimed</span>' : '<span data-lang="goComplete">Claim</span>') : '<span data-lang="goComplete">to complete</span>'}
           </div>
         </div>
                         `
@@ -1110,6 +1110,7 @@
           function load_lang_data(data)
           {
             $.each(data, function(key,valueObj){
+              console.log(key);
               $("[data-lang="+key+"]").text(valueObj);
             });
           }
