--- a/src/views/checkIn/dailytask.ejs
+++ b/src/views/checkIn/dailytask.ejs
@@ -692,7 +692,7 @@
             <div data-v-20a4a6c6="" class="hearder-status day">
               Daily mission
             </div>
-            <span data-v-20a4a6c6="" class="headerR">
+            <span data-v-20a4a6c6="" class="headerR" data-lang="undone">
               Unfinished
             </span>
           </div>
@@ -730,7 +730,7 @@
             <div data-v-20a4a6c6="" class="hearder-status day">
               Daily mission
             </div>
-            <span data-v-20a4a6c6="" class="headerR">
+            <span data-v-20a4a6c6="" class="headerR" data-lang="undone">
               Unfinished
             </span>
           </div>
@@ -768,7 +768,7 @@
             <div data-v-20a4a6c6="" class="hearder-status day">
               Daily mission
             </div>
-            <span data-v-20a4a6c6="" class="headerR">
+            <span data-v-20a4a6c6="" class="headerR" data-lang="undone">
               Unfinished
             </span>
           </div>
@@ -806,7 +806,7 @@
             <div data-v-20a4a6c6="" class="hearder-status day">
               Daily mission
             </div>
-            <span data-v-20a4a6c6="" class="headerR">
+            <span data-v-20a4a6c6="" class="headerR" data-lang="undone">
               Unfinished
             </span>
           </div>
@@ -906,7 +906,7 @@
               Daily mission
             </div>
             <span data-v-20a4a6c6="" class="headerR">
-              ${item.isFinished ? "Finished" : "Unfinished"}
+              ${item.isFinished ?  '<span data-lang="undone">Finished</span>' : '<span data-lang="undone">Unfinished</span>'}
             </span>
           </div>
           <div data-v-20a4a6c6="" class="task-item-type">
@@ -963,7 +963,7 @@
               weekly tasks
             </div>
             <span data-v-20a4a6c6="" class="headerR">
-              ${item.isFinished ? "Finished" : "Unfinished"}
+              ${item.isFinished ?  '<span data-lang="undone">Finished</span>' : '<span data-lang="undone">Unfinished</span>'}
             </span>
           </div>
           <div data-v-20a4a6c6="" class="task-item-type">
